--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -71,8 +71,7 @@ functions:
         Resource:
           - '*'
       - Effect: Allow
-        Action:
-          - s3:*
+        Action: 's3:GetObject'
         Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*
 
   # TODO: Configure this function - 
